Add PATCH /stopwatch endpoint
