# backend/core/api/openapi.yaml
@@ -610,6 +610,34 @@ paths:
             application/json:
               schema: { $ref: '#/components/schemas/ErrorResponse' }
 
+    patch:
+      summary: Update user's stopwatch
+      operationId: updateStopwatch
+      tags: [Stopwatches]
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Stopwatch'
+      responses:
+        '204':
+          description: Successfully updated user's stopwatch
+        '400':
+          description: Invalid request data
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ErrorResponse' }
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/ErrorResponse' }
+
 components:
   securitySchemes:
     bearerAuth:
@@ -856,7 +884,6 @@ components:
       required:
         - id
         - user_id
-        - isInitiated
       properties:
         id:
           type: string
